--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
-    <androidx.camera.view.PreviewView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/img_showcase"
         android:layout_width="250dp"
         android:layout_height="130dp"
@@ -16,6 +16,25 @@
         android:background="@drawable/edit_text_focused_bg_color"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/galleryButton"
+            android:text="Pick Photo"
+            android:layout_gravity="center"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/cameraButton"
+            android:text="Take Photo"
+            android:layout_gravity="center"/>
+    </LinearLayout>
 
     <Spinner
         android:id="@+id/dangerOptions"
