--- a/app/src/main/res/layout/infowindow.xml
+++ b/app/src/main/res/layout/infowindow.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/image"
         android:layout_width="150dp"
         android:layout_height="100dp" />
