--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -48,6 +48,7 @@
     <EditText
         android:id="@+id/usertext"
         android:inputType="text"
+        android:hint="Textnachricht (optional)"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
